// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Events create can be created 1`] = `
Object {
  "data": Object {
    "createEvent": Object {
      "description": Array [
        Object {
          "children": Array [
            Object {
              "text": "Event Bio Heading",
            },
          ],
          "type": "heading-one",
        },
        Object {
          "children": Array [
            Object {
              "text": "event bio text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "endsAt": 2020-11-25T22:00:00.000Z,
      "id": Any<String>,
      "image": null,
      "location": "Foobar Street 5
  8015 Barfoo City",
      "name": "Test Event",
      "startsAt": 2020-11-25T20:00:00.000Z,
      "status": "SCHEDULED",
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": Any<String>,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Events create can be created with bare minimum 1`] = `
Object {
  "data": Object {
    "createEvent": Object {
      "description": Array [],
      "endsAt": null,
      "id": Any<String>,
      "image": null,
      "location": null,
      "name": "Test Event",
      "startsAt": 2020-11-25T20:00:00.000Z,
      "status": "SCHEDULED",
      "tags": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Events create can not be created with endsAt before startsAt 1`] = `
Object {
  "data": Object {
    "createEvent": null,
  },
  "errors": Array [
    [GraphQLError: endsAt can not be earlier than startsAt],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Events query private can query a list of events within a timeframe 1`] = `
Array [
  Object {
    "endsAt": null,
    "startsAt": 2050-06-19T09:07:20.261Z,
  },
  Object {
    "endsAt": 2050-06-19T09:07:20.261Z,
    "startsAt": 2036-10-10T09:07:20.261Z,
  },
  Object {
    "endsAt": 2036-10-10T09:07:20.261Z,
    "startsAt": 2009-05-25T09:07:20.261Z,
  },
]
`;

exports[`Events update can not be updated with endsAt before startsAt 1`] = `
Object {
  "data": Object {
    "updateEvent": null,
  },
  "errors": Array [
    [GraphQLError: endsAt can not be earlier than startsAt],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Events update can not be updated with endsAt before startsAt 2`] = `
Object {
  "data": Object {
    "updateEvent": null,
  },
  "errors": Array [
    [GraphQLError: endsAt can not be earlier than startsAt],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
